--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -22,6 +22,9 @@ jobs:
                   node-version: ${{ matrix.node-version }}
                   cache: 'npm'
 
+            - name: Run CI command
+              run: npm ci
+
             - name: Check linting
               run: npm run lint
 
