--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 		"typescript": "^4.9.5",
 		"web-vitals": "^2.1.4"
 	},
+	"engines": {
+		"node": "18.14.0",
+		"npm": "9.3.1"
+	},
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
